<resources>
    <string name="app_name">Instagram</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="private_information">Private Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_acc">Don`t have an account? <b>Sign up.</b></string>
    <string name="next">Next</string>
    <string name="enter_full_name_and_password">Enter full name and password</string>
    <string name="full_name">Full name</string>
    <string name="register">Register</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="change_photo">Change photo</string>
    <string name="share_to">Share to</string>
    <string name="share">Share</string>
</resources>
