<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:id="@+id/scroll_view"
    android:scrollbars="none">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.LoginActivity">

        <ImageView
            android:id="@+id/iv_instagram"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginEnd="@dimen/divider_xl"
            android:layout_marginStart="@dimen/divider_xl"
            android:layout_marginTop="@dimen/divider_xl"
            android:src="@drawable/instagram"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email"
            style="@style/login_et"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/iv_instagram" />

        <EditText
            android:id="@+id/et_password"
            style="@style/login_et"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <Button
            android:id="@+id/btn_login"
            style="@style/login_btn"
            android:text="@string/log_in"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            android:background="@drawable/top_border_grey"
            android:gravity="center"
            android:text="@string/dont_have_acc"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>