<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/toolbar_title"
                android:text="panzhiev"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                style="@style/toolbar_image"
                android:src="@drawable/ic_more"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/divider_m"
        android:src="@drawable/kotlin_logo"
        app:civ_border_color="@color/grey"
        app:civ_border_width="1dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_profile"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tv_posts_count"
        style="@style/profile_text_count"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_profile"
        app:layout_constraintEnd_toEndOf="@id/tv_posts_text"
        app:layout_constraintStart_toStartOf="@id/tv_posts_text"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.4"
        tools:text="50" />

    <TextView
        android:id="@+id/tv_posts_text"
        style="@style/profile_text"
        android:text="@string/posts"
        app:layout_constraintEnd_toStartOf="@id/tv_followers_text"
        app:layout_constraintStart_toStartOf="@id/btn_edit_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_posts_count" />

    <TextView
        android:id="@+id/tv_followers_count"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts_count"
        app:layout_constraintEnd_toEndOf="@id/tv_followers_text"
        app:layout_constraintStart_toStartOf="@id/tv_followers_text"
        tools:text="100" />

    <TextView
        android:id="@+id/tv_followers_text"
        style="@style/profile_text"
        android:text="@string/followers"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts_text"
        app:layout_constraintEnd_toStartOf="@id/tv_following_text"
        app:layout_constraintStart_toEndOf="@id/tv_posts_text" />

    <TextView
        android:id="@+id/tv_following_count"
        style="@style/profile_text_count"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts_count"
        app:layout_constraintEnd_toEndOf="@id/tv_following_text"
        app:layout_constraintStart_toStartOf="@id/tv_following_text"
        tools:text="200" />

    <TextView
        android:id="@+id/tv_following_text"
        style="@style/profile_text"
        android:text="@string/following"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_posts_text"
        app:layout_constraintEnd_toEndOf="@id/btn_edit_profile"
        app:layout_constraintStart_toEndOf="@id/tv_followers_text" />

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/divider_s"
        android:layout_marginEnd="@dimen/divider_m"
        android:background="@drawable/button_bg"
        android:minHeight="0dp"
        android:padding="@dimen/divider_xs"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toEndOf="@id/iv_profile" />

    <include layout="@layout/bottom_navigation_view" />

</android.support.constraint.ConstraintLayout>